src/test/ui/argument-suggestions/swapped_arguments.stderr
error[E0059]: arguments to this function are incorrect
  --> $DIR/swapped_arguments.rs:8:12
   |
LL |   two_args(1.0, 1);
   |            ^^^  ^ expected f32, found f32
   |            |
   |            expected i32, found i32
   |
note: function defined here
  --> $DIR/swapped_arguments.rs:3:4
   |
LL | fn two_args(_a: i32, _b: f32) {}
   |    ^^^^^^^^ -------  -------
help: swapping these two arguments might help
   |
LL |   two_args(1, 1.0);
   |            ^  ^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/swapped_arguments.rs:9:14
   |
LL |   three_args(1.0,   1,  "");
   |              ^^^    ^ expected f32, found f32
   |              |
   |              expected i32, found i32
   |
note: function defined here
  --> $DIR/swapped_arguments.rs:4:4
   |
LL | fn three_args(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: swapping these two arguments might help
   |
LL |   three_args(1,   1.0,  "");
   |              ^    ^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/swapped_arguments.rs:10:20
   |
LL |   three_args(  1,  "", 1.0);
   |                    ^^  ^^^ expected &str, found &str
   |                    |
   |                    expected f32, found f32
   |
note: function defined here
  --> $DIR/swapped_arguments.rs:4:4
   |
LL | fn three_args(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: swapping these two arguments might help
   |
LL |   three_args(  1,  1.0, "");
   |                    ^^^  ^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/swapped_arguments.rs:11:15
   |
LL |   three_args( "", 1.0,   1);
   |               ^^         ^ expected &str, found &str
   |               |
   |               expected i32, found i32
   |
note: function defined here
  --> $DIR/swapped_arguments.rs:4:4
   |
LL | fn three_args(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: swapping these two arguments might help
   |
LL |   three_args( 1, 1.0,   "");
   |               ^         ^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/swapped_arguments.rs:13:13
   |
LL |   four_args(1.0, 1, X {}, "");
   |             ^^^  ^  ^^^^  ^^ expected X, found X
   |             |    |  |
   |             |    |  expected &str, found &str
   |             |    expected f32, found f32
   |             expected i32, found i32
   |
note: function defined here
  --> $DIR/swapped_arguments.rs:5:4
   |
LL | fn four_args(_a: i32, _b: f32, _c: &str, _d: X) {}
   |    ^^^^^^^^^ -------  -------  --------  -----
help: swapping these sets of arguments might help
   |
LL |   four_args(1, 1.0, "", X {});
   |             ^  ^^^  ^^  ^^^^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0059`.
